# emailbook-rs

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: emailbook.rs  main.rs
src/emailbook/: mod.rs  tests.rs
test/: add.sh  book-expected.txt  parse.sh  query-expected.txt  query.sh  sample1  sample2  utils.sh
