[package]
name = "emailbook"
version = "0.4.0"
edition = "2024"
description = "A minimalistic address book for e-mails only"
license = "MIT"

[dependencies]
base64 = "0.22"
clap = { version = "4.5.60", default-features = false, features = ["derive", "std", "help", "usage"] }
clap_complete = "4"
directories = "6"
encoding_rs = "0.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dev-dependencies]
tempfile = "3"
